--- a/src/output.css
+++ b/src/output.css
@@ -554,15 +554,99 @@ video {
   --tw-contain-style:  ;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+*{
+  padding: 0;
 }
 
-.font-bold {
-  font-weight: 700;
+body{
+  padding-left: 3vw;
 }
 
-.underline {
-  text-decoration-line: underline;
+.corpo{
+  width: 100%;
+  height: 100%;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 20px;
+  height: 15vh;
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid grey;
+  border-radius: 10px;
+  width: 32%;
+  height: 70vh;
+}
+
+article{
+  text-align: center;
+}
+
+.head{
+  position: relative;
+  width: 31vw;
+}
+
+.landscape{
+  width: 100%;
+  border-radius: 10px;
+  height: 25vh;
+}
+
+.pfp{
+  position: absolute;
+  bottom: -70px;
+  right: 31%;
+  border-radius: 50%;
+  border: 5px solid white;
+}
+
+.name{
+  margin-top: 60px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.login{
+  font-size: 1.2em;
+  color: gray;
+}
+
+nav{
+  margin-top: 20px;
+  width: 100%;
+  padding: 20px;
+}
+
+section{
+  padding: 20px;
+}
+
+.nameR{
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.description{
+  margin-top: 5px;
+  color: gray;
+}
+
+.language{
+  background-color: rgb(204, 203, 203);
+  padding: 3px;
+  border-radius: 5px;
+}
+
+button{
+  background-color: blueviolet;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
 }
